added styles for success message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <picture>
           <source media="(min-width:64rem)" srcset="assets/images/illustration-sign-up-desktop.svg" width="400" height="593">
           <source media="(min-width:48rem)" srcset="assets/images/illustration-sign-up-tablet.svg" width="528" height="360">
-          <img src="assets/images/illustration-sign-up-mobile.svg" alt="main__illustration" width="375" height="284">
+          <img class="main__illustration" src="assets/images/illustration-sign-up-mobile.svg" alt="" width="375" height="284">
         </picture>
 
         <section class="main__signup--copy">
@@ -36,10 +36,13 @@
         <form class="main__signup--form" novalidate>
           <div class="">
             <p>Email address</p>
-            <p id="errorMessage">Valid email required</p>
+            <span id="errorMessage">Valid email required</span>
           </div>
 
           <div class="input-button">
+            
+
+
             <input type="email" id="username" placeholder="email@company.com">
             <button type="submit">Subscribe to monthly newsletter</button>
           </div>
@@ -52,12 +55,12 @@
       <section class="success-block">
         <!-- Success message start -->
         <div class="success-message">
+          <img src="assets/images/icon-success.svg" alt="">
           <h1>Thanks for subscribing!</h1>
           <p> A confirmation email has been sent to <a href="#"><strong>ash@loremcompany.com</strong></a>. Please open it and click the button inside to confirm your subscription.</p>
+          <button type="button">Dismiss message</button>
+          <!-- Success message end -->
         </div>
-
-        <button type="button">Dismiss message</button>
-        <!-- Success message end -->
       </section>
       
     </main>
