--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <link delay rel="stylesheet" href="script.js">
     <title>Frontend Mentor | Newsletter sign-up form with success message</title>
   </head>
+
   <body>
     <main class="main__newsletter--signup">
 
-      <section class="main__signup--block">
+      <section class="main__signup--block hidden">
 
-        <div class="image-wrapper">
-          <picture class="newsletter-image">
-            <source media="(min-width:55.5rem)" srcset="assets/images/illustration-sign-up-desktop.svg" width="400" height="593">
-            <source media="(min-width:34.375rem)" srcset="./assets/images/illustration-sign-up-tablet.svg" width="528" height="360">
-            <img class="main__illustration" src="assets/images/illustration-sign-up-mobile.svg" alt="" width="375" height="284">
+        <div class="image--container">
+          <picture class="newsletter__image">
+            <source media="(min-width:55rem)" srcset="assets/images/illustration-sign-up-desktop.svg" width="400" height="593">
+            <source media="(min-width:23.5rem) and (max-width:55rem)" srcset="./assets/images/illustration-sign-up-tablet.svg" width="528" height="360">
+            <img src="assets/images/illustration-sign-up-mobile.svg" alt="" width="375" height="284">
           </picture>
         </div>  
 
@@ -27,7 +28,7 @@
           <h1 class="main__signup--heading">Stay updated!</h1>
           <p class="main__signup--text">Join 60,000+ product managers receiving monthly updates on:</p>
 
-          <ul>
+          <ul class="main__signup--benefits">
             <li>Product discovery and building what matters</li>
             <li>Measuring to ensure updates are a success</li>
             <li>And much more!</li>
@@ -36,26 +37,26 @@
           <form id="form" class="main__signup--form" novalidate>
             <div class="email-error-container">
               <label for="email"><strong>Email address</strong></label>
-              <span aria-live="polite" id="errorMessage"><strong>Valid email required</strong></span>
+              <span id="email-error" class="email-error hidden" aria-live="polite"><strong></strong></span>
             </div>
 
             <div class="field-button-container">
-              <input id="email" name="email" type="email" placeholder="email@company.com">
+              <input id="email" type="email" name="email" placeholder="email@company.com">
               <button type="submit">Subscribe to monthly newsletter</button>
             </div>
           </form>
         </section>
       </section>
 
-      <section class="success-block">
-        <div class="success-message">
-          <div class="msg-container">
+      <section class="main__success--block" aria-live="polite" role="alert">
+        <div class="success--message">
+          <div class="message--container">
             <img src="assets/icons/icon-success.svg" alt="">
             <h1>Thanks for subscribing!</h1>
-            <p> A confirmation email has been sent to <a href="#"><strong>ash@loremcompany.com</strong></a>. Please open it and click the button inside to confirm your subscription.</p>
+            <p> A confirmation email has been sent to <strong class="success-email">ash@loremcompany.com</strong>. Please open it and click the button inside to confirm your subscription.</p>
           </div>
 
-          <div class="btn-container">
+          <div class="button--container">
            <button type="button">Dismiss message</button>
           </div>
         </div>
