edit: made layout optimal for all screen sizes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main class="main__newsletter--signup">
 
-      <section class="main__signup--block hidden">
+      <section class="main__signup--block">
 
         <div class="image--container">
           <picture class="newsletter__image">
@@ -48,7 +48,7 @@
         </section>
       </section>
 
-      <section class="main__success--block" aria-live="polite" role="alert">
+      <section class="main__success--block hidden" aria-live="polite" role="alert">
         <div class="success--message">
           <div class="message--container">
             <img src="assets/icons/icon-success.svg" alt="">
