--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <form id="form" class="main__signup--form" novalidate>
             <div class="email-error-container">
               <label for="email"><strong>Email address</strong></label>
-              <span id="email-error" class="email-error hidden" aria-live="polite"><strong></strong></span>
+              <span id="email--error" class="email--error" aria-live="polite"><strong></strong></span>
             </div>
 
             <div class="field-button-container">
@@ -53,7 +53,7 @@
           <div class="message--container">
             <img src="assets/icons/icon-success.svg" alt="">
             <h1>Thanks for subscribing!</h1>
-            <p> A confirmation email has been sent to <strong class="success-email">ash@loremcompany.com</strong>. Please open it and click the button inside to confirm your subscription.</p>
+            <p> A confirmation email has been sent to <strong class="success--email">ash@loremcompany.com</strong>. Please open it and click the button inside to confirm your subscription.</p>
           </div>
 
           <div class="button--container">
