added classes for retrieval from DOM

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <li>And much more!</li>
           </ul>
 
-          <form id="form" class="main__signup--form" novalidate>
+          <form id="signup--form" class="main__signup--form" novalidate>
             <div class="email-error-container">
               <label for="email"><strong>Email address</strong></label>
               <span id="email--error" class="email--error" aria-live="polite"><strong></strong></span>
             </div>
 
             <div class="field-button-container">
-              <input id="email" type="email" name="email" placeholder="email@company.com">
+              <input id="email" class="email" type="email" name="email" placeholder="email@company.com">
               <button type="submit">Subscribe to monthly newsletter</button>
             </div>
           </form>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="button--container">
-           <button type="button">Dismiss message</button>
+           <button type="button" id="dismiss--button" class="dismiss--button">Dismiss message</button>
           </div>
         </div>
       </section>
