--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="field-button-container">
-              <input id="email" class="email" type="email" name="email" placeholder="email@company.com">
+              <input id="email" class="field--input email" type="email" name="email" placeholder="email@company.com">
               <button type="submit">Subscribe to monthly newsletter</button>
             </div>
           </form>
@@ -53,7 +53,7 @@
           <div class="message--container">
             <img src="assets/icons/icon-success.svg" alt="">
             <h1>Thanks for subscribing!</h1>
-            <p> A confirmation email has been sent to <strong class="success--email">ash@loremcompany.com</strong>. Please open it and click the button inside to confirm your subscription.</p>
+            <p> A confirmation email has been sent to <strong class="user--email">ash@loremcompany.com</strong>. Please open it and click the button inside to confirm your subscription.</p>
           </div>
 
           <div class="button--container">
