--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preload" href="assets/fonts/roboto-v50-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="assets/fonts/roboto-v50-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="styles.css">
-    <link delay rel="stylesheet" href="script.js">
+    <script defer src="script.js"></script>
     <title>Frontend Mentor | Newsletter sign-up form with success message</title>
   </head>
 
